added script for add button

--- a/public/index.htm
+++ b/public/index.htm
@@ -16,7 +16,7 @@
     <div class="container w-100">
         <div class="add-note-section">
             <h4 class="mt-1 mb-0 p-3 bg-primary rounded-top-4">Add a New Note</h4>
-            <form class="bg-white p-3 border rounded-bottom-4">
+            <form class="bg-white p-3 border rounded-bottom-4" id="dataForm">
                 <div class="row">
                     <div class="col-md-3 mt-2">
                         <label for="fillDate" class="form-label">Date</label>
